--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ astunparse==1.6.3
 attrs==24.2.0
 blinker==1.9.0
 cachetools==5.5.0
+catboost==1.2.7
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
@@ -21,6 +22,7 @@ gast==0.6.0
 gitdb==4.0.11
 GitPython==3.1.43
 google-pasta==0.2.0
+graphviz==0.20.3
 greenlet==3.1.1
 grpcio==1.68.0
 h11==0.14.0
@@ -44,13 +46,14 @@ mdurl==0.1.2
 ml-dtypes==0.4.1
 namex==0.0.8
 narwhals==1.15.1
-numpy==2.0.2
+numpy==1.26.4
 opt_einsum==3.4.0
 optree==0.13.1
 optuna==4.1.0
 packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
+plotly==5.24.1
 protobuf==5.29.0
 pyarrow==18.1.0
 pydantic==2.10.3
